	* benchmarks/*f90.f: renamed to benchmarks/*f90.f90
	* examples/complex.cpp: renamed to examples/complex-test.cpp
	* testsuite/complex.cpp: renamed to testsuite/complex-test.cpp due to
	interference with #include<complex>
	* Makefile.in, aclocal.m4, configure, benchmarks/Makefile.in,
	bin/Makefile.in, blitz/Makefile.in, blitz/array/Makefile.in,
	blitz/generate/Makefile.in, blitz/meta/Makefile.in, compiler/Makefile.in,
	demos/Makefile.in, examples/Makefile.in, lib/Makefile.in,
	manual/Makefile.in, manual/examples/Makefile.in,
	manual/stencils/Makefile.in, random/Makefile.in, src/Makefile.in,
	testsuite/Makefile.in: regenerated files from Makefile.am generated by
	running automake (GNU automake) 1.4a
	* manual/examples/Makefile, manual/stencils/Makefile: removed, now generated
	by configure
	* CHANGELOG: renamed to ChangeLog.1
	* manual/examples/*.out: renamed to manual/examples/*.log due to
	interference with automake
	* compiler/elabbase.cpp: bar() replaced by this->bar() in zowee() const for
	ANSI C++ correctness (14.6.2(3) in the C++ Standard)
	* src/globals.cpp: char* _blitz_id replaced by char _blitz_id[]
	* random/uniform.h: irng_.random() replaced by this->irng_.random()
	everywhere for ANSI C++ correctness (14.6.2(3) in the C++ Standard)
	* random/discrete-uniform.h: likewise
	* random/normal.h: getUniform() replaced by this->getUniform() 
	* blitz/array-impl.h: 
	data_ replaced by this->data_ everywhere,
	changeToNullBlock() replaced by this->changeToNullBlock(),
	class _bz_endTag replaced by struct _bz_endTag { } declaration
	* blitz/array/resize.cc: for (d=0; d < N_rank; ++d) replaced by for (int
	d=0; d < N_rank; ++d) (for scoping)
	* blitz/array/iter.h: 
	data_ replaced by this->data_ in 
	template<class T, int N>
	class ArrayIterator : public ConstArrayIterator<T,N> {},
	removed struct _bz_endTag { }; declaration
	* blitz/array/io.cc: added typename (_bz_typename) qualifier to the
	iterator and const_iterator of Array<T_numtype,N_rank>

